Add initial content

--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
 <!DOCTYPE html>
 <head>
+<title>Page title here</title>
 </head>
 <body>
+<header>
+<nav></nav>
+</header>
+<main>
+<section>
+<h1>h1 heading</h1>
+<p>asdasdasdasd</p>
+</section>
+</main>
+<footer></footer>
 </body>
