--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </header>
 <main>
 <section>
-<h1>h1 heading</h1>
-<p>asdasdasdasd</p>
+<h2>h2 heading</h2>
+<p>plasdasdasdplapsdlaspd lasdasdasdasd</p>
 </section>
 </main>
 <footer></footer>
