--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
 <title>Page title here</title>
 </head>
@@ -14,3 +15,4 @@
 </main>
 <footer></footer>
 </body>
+</html>
