Update index.html footer

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 <p>plasdasdasdplapsdlaspd lasdasdasdasd</p>
 </section>
 </main>
-<footer></footer>
+<footer>
+  <h3>h3 heading</h3>
+  <p>
+    asdasdalsdkasldiuerlkrjelkf
+  </p>
+</footer>
 </body>
 </html>
