--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
 </head>
 <body>
 <header>
-<nav></nav>
+<nav>
+  <ul>
+    <li>item1</li>
+    <li>item2</li>
+    <li>item3</li>
+    <li>item4</li>
+  </ul>  
+</nav>
 </header>
 <main>
 <section>
